<?xml version="1.0"?>
<package format="2">
  <name>control_loop</name>
  <version>0.1.0</version>
  <description>The control_loop package does the job for you</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="dorian.goepp@inria.fr">dgoepp</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>CeCILL-C</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="repository">https://github.com/resibots/ros_control_loop</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="dorian.goepp@gmail.com">Dorian Goepp</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>combined_robot_hw</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_export_depend>combined_robot_hw</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <exec_depend>combined_robot_hw</exec_depend>
  <exec_depend>controller_manager</exec_depend>
</package>
